--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+contourpy==1.3.1
+cycler==0.12.1
+et_xmlfile==2.0.0
+fonttools==4.55.8
 joblib==1.4.2
+kiwisolver==1.4.8
 matplotlib==3.10.0
 numpy==2.2.2
 opencv-python==4.11.0.86
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
+pillow==11.1.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 setuptools==75.8.0
+six==1.17.0
 threadpoolctl==3.5.0
+tzdata==2025.1
 wheel==0.45.1
+XlsxWriter==3.2.2
